# MultiHop-EgoQA

./: .gitignore  README.md  bibtex.txt  index.html
baseline/: eval_multihop_qa.sh  eval_rtl.sh  pyproject.toml
baseline/datasets/: DATASET.md
baseline/gelm/: __init__.py  arguments.py  constants.py  utils.py
baseline/gelm/dataset/: base_dataset.py  hybrid_dataset.py  multihop_qa_dataset.py  temporal_reasoning_dataset.py
baseline/gelm/eval/: eval_gpt_review_rtl.py  inference_multihop_qa.py  inference_rtl.py  summarize_gpt_review.py
baseline/gelm/model/: __init__.py  builder.py  gelm_arch.py  grounding_head.py
baseline/gelm/model/language_model/: gelm_llama.py
baseline/gelm/train/: train.py  train_mem.py
baseline/llava/: conversation.py  mm_utils.py
baseline/llava/model/: llava_arch.py
baseline/llava/model/multimodal_encoder/: clip_encoder.py
baseline/llava/train/: train_mem.py
baseline/scripts/: finetune_mixed.sh  finetune_multihop_qa.sh  finetune_rtl.sh
benchmark/metrics/: answering_metrics.py  evaluate.sh  evaluate_answering.py  evaluate_grounding.py
benchmark/zero-shot-inference/: GPT-4o.py  InternVL-Chat.py  LLaVa-NeXT-Video.py  TimeChat.py  VTimeLLM.py  inference.sh
benchmark/zero-shot-inference/pipeline/: caption.py  reason.py
